2007-06-24  Maximilien Cuony
	* 0.4.2.1 repacked, and uploaded to the server !
	* Apply diff of 22/06 for gpgAuth
	* Implement getContentXhttp
	* getMimeMailContens finished !

2007-06-21  Maximilien Cuony
	* 0.4.2.1 packed, and uploaded to the server !
	* First implementation of gpgAuth.
	* Fix problem with pl locate.
	* pl, tr, de, pt, updated
	* ca added

2007-06-19  Maximilien Cuony
	* 0.4.2 packed, and uploaded to the server !
	* it, zh-CN, zh-TW, tr, pt_BR updated
	* New locate : ko-KR
	* Updated locates

2007-06-18  Maximilien Cuony
	* Fixed a bug with cygwin on windows (thanks to Kevin Hilton and Marco Bonetti for report and help)

2007-06-17  Maximilien Cuony
	* Can get the mime content of a mail (need implemantation now, but work with a simple alert)
	* Added AUTHORS, COPYING and REDAME in the Xpi file

2007-06-14  Maximilien Cuony
	* Improve performances in cgmail
	* Fix a bug in autoselect in cgmail.

2007-06-13  Maximilien Cuony
	* Find the news mails content in cgmail (but a bit experimental)

2007-06-12  Maximilien Cuony
	* Autoselect the recipants for crypt in gmail !

2007-06-12  Achraf cherti
	* some orthography/grammar errors are fixed in the french/english locales.
	* translation of some untranslated strings in en-US locale (it was in French)

2007-06-11  Maximilien Cuony
	* Auto detect new version and propose update for FireGPG.

2007-06-09  Maximilien Cuony
	* 0.4.1 packed, and uploaded to the server !
	* de, pl, es, nl, pt, it updated too.
	* Updated locates

2007-06-08  Maximilien Cuony
	* Add 'encrypt to myself' option
	* Fix a bug with decrypting message with several recipients.
	* Fix a bug with private select key.
	* Improve performances : init Gpg only when use it !

2007-06-07  Maximilien Cuony
	* Fixed proble with Options' tabs.
	* BYEBYE WINDOWS CONSOLE ! Use a program from Alexander Avdonin.
	* Try to detect gpg on windows.
	* Added pt_BR translation
	* Some english corrections from Scott Morrison <scott@math.berkeley.edu>