@@ -34,3 +34,5 @@ editorDescription=Here you can edit and perform some operations on a text.
 whatIsNewTitle=What is new ?
 whatIsNewDescription=News of FireGPG : (An anonymous ping has been send to FireGPG's team for stats.)
 newVersionAlert=A new version of FireGPG is available, would you like to update now?
+turn-off-updates-w1=WARNING: We recommend you don't turn automatic updates off if you are unable to update FireGPG with Firefox or if you don't regularly check for new addon versions.
+turn-off-updates-w2=Are you sure?  We recommend leaving this option on.  It is here to help you maintain FireGPG up to date, which is still in beta and can have security issues.
